# bitepy

./: 404.html  CMakeLists.txt  LICENSE  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build.yml  gh-pages.yml  release.yml
about/: index.html
bitepy/: __init__.py  _bitepy.cpp  data.py  heatmap.py  results.py  simulation.py
data/: index.html
example_data/: 00_README.md
notebooks/: package_tutorial.ipynb
results/: index.html
search/: search_index.json
simulation/: index.html
